@@ -59,3 +59,4 @@
 	- bugfix: spinner not always attached
 0.0.31
 	- renamed built css file (now tnt.board.css)
+	- api: move_right / move_left renamed scroll
